--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
  - "3.6"
  - "3.9"
 install:
- - pip install -r requirement.txt
+ - pip install -r requirements.txt
  - pip install .
 script: 
  - python -m unittest discover -v -s "./tests" -p "test_*.py"
