--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ install:
  - pip install .
 script: 
  - python -m unittest discover -v -s "./tests" -p "test_*.py"
+
+ deploy:
+  provider: pypi
+  user: __token__
+  password: $FDIEULLE_PYPI_TOKEN
+  distributions: "sdist bdist_wheel"
+  skip_existing: true
+  on:
+    branch: staging
