--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
  - pip install -r requirements.txt
  - pip install .
 script: 
- - python -m unittest discover -v -s "./tests" -p "test_*.py"
+ - pytest tests/
 
 deploy:
  provider: pypi
