--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
     "python.pythonPath": "${workspaceFolder}/venv/Scripts/python.exe",
-    "python.testing.unittestArgs": [
-        "-v",
-        "-s", "./tests",
-        "-p", "test_*.py"
-    ],
-    "python.testing.pytestEnabled": false,
+    "python.testing.pytestEnabled": true,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.unittestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
 }
