--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
  - pip install pytest-cov
  - pip install .
 script: 
- - pytest --cov-report=xml --cov=deeptabular tests/
+ - pytest --cov-report=xml --cov=treebuilder tests/
 
 after_success:
  - codecov -t $CODECOV_TOKEN
