--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ deploy:
     password: $FDIEULLE_PYPI_TOKEN
     distributions: "sdist bdist_wheel"
     skip_existing: true
+    skip_cleanup: true
     on:
       tags: true
       python: "3.9"
